<resources>
    <string name="app_name">Listening english</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word">Word</string>
    <string name="exit">Thoát</string>
    <string name="reset">Chơi lại</string>
    <string name="aler_message_game">Bạn có chắc muốn thoát game không? Phần chơi hiện tại sẽ không được lưu.</string>
    <string name="goto_practice">Bạn đã học xong phần từ vựng. Bạn có muốn tham gia chơi game thực hành luyện nghe tiếng anh không?</string>
    <string name="score">Điểm số</string>
    <string name="hang">Hạng</string>
    <string name="time_play">Thời gian</string>
    <string name="level">Level</string>
    <string name="return_menu">Trở về</string>
    <string name="invalid">---</string>
    <string name="how_to_play">Hướng dẫn</string>
    <string name="learn_words">I. Học từ vựng</string>
    <string name="title_minigame_howtoplay">II. Mini game lật hình ghép từ vựng</string>
    <string name="step_0">Step: 0</string>

</resources>
