<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:background="#009987">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="#FFF"
            android:textSize="40sp" />

        <View
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/hang"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/time_play"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="1"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="2"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="3"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="4"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHang5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="5"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblThoiGian5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lblMucLevel5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/invalid"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTroVeTuScore"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/return_menu"/>
</RelativeLayout>